--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prueba</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=ZCOOL+KuaiLe&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <div class="overlay"></div>
-        <div class="principal">
-            <div class="logo"></div>
-            <div class="titulo">
-                <h1 style="color: aliceblue;">Un mundo lleno de </h1>
-                <h1 style="color: aliceblue;">emociones, en un mismo lugar.</h1>
-            </div>
-            <div class="btn_prueba">
-                <button type="button" class="btn btn-info">PRUEBA 10 DIAS GRATIS</button></div>
-            <div class="subtitulo">
-                <h5>Empieza ahora tu prueba gratuita de 10 dias. Luego disfruta por 1 sol al mes o 10 soles al año.Se aplican terminos y condiciones. </h5>
-            </div>
-            <div class="colaboraciones">
-                <ul class="disney"></ul>
-                <ul class="mas"></ul>
-                <ul class="pixar"></ul>
-                <ul class="mas"></ul>
-                <ul class="marvel"></ul>
-                <ul class="mas"></ul>
-                <ul class="star_wars"></ul>
-                <ul class="mas"></ul>
-                <ul class="national"></ul>
-            </div>
+      <div class="principal">
+        <div class="logo"></div>
+        <div class="titulo">
+          <h1 style="color: aliceblue">Un mundo lleno de</h1>
+          <h1 style="color: aliceblue">emociones, en un mismo lugar.</h1>
         </div>
-        <video onloadstart="this.muted= true" autoplay loop>
-            <source src="video.mp4">
-        </video>
+        <div class="btn_prueba">
+          <button type="button" class="btn btn-info">
+            PRUEBA 10 DIAS GRATIS
+          </button>
+        </div>
+        <div class="subtitulo">
+          <h5>
+            Empieza ahora tu prueba gratuita de 10 dias. Luego disfruta por 1
+            sol al mes o 10 soles al año.Se aplican terminos y condiciones.
+          </h5>
+        </div>
+        <div class="colaboraciones">
+          <ul class="disney"></ul>
+          <ul class="mas"></ul>
+          <ul class="pixar"></ul>
+          <ul class="mas"></ul>
+          <ul class="marvel"></ul>
+          <ul class="mas"></ul>
+          <ul class="star_wars"></ul>
+          <ul class="mas"></ul>
+          <ul class="national"></ul>
+        </div>
+      </div>
+      <video onloadstart="this.muted= true" autoplay loop>
+        <source src="video.mp4" />
+      </video>
     </header>
-
-</body>
-
+  </body>
 </html>
